# gramkit

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  Makefile.shared  README.md  docker-compose.demo.yml  docker-compose.shared.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude/: README.md
apps/template-vue/backend/: .env.test  Dockerfile  README.md  pyproject.toml
apps/template-vue/backend/migrations/versions/: 148636cfdfb0_uuid7_user_id_migration.py  552d225faf6b_rename_tg_fields_add_app_profile.py  83fe3bdd59fa_make_tg_first_name_nullable.py  cc1f66a220fd_add_user_role.py
apps/template-vue/backend/src/app/: __init__.py  config.py
apps/template-vue/backend/src/app/i18n/locales/: en.json  ru.json
apps/template-vue/backend/src/app/infrastructure/database/: setup.py
apps/template-vue/backend/src/app/infrastructure/database/models/: __init__.py  balance.py
apps/template-vue/backend/src/app/infrastructure/database/repo/: __init__.py  requests.py
apps/template-vue/backend/src/app/schemas/: __init__.py
apps/template-vue/backend/src/app/scripts/: __init__.py  demo_user_stats.py
apps/template-vue/backend/src/app/services/: __init__.py  base.py  requests.py  statistics.py
apps/template-vue/backend/src/app/services/notifications/: __init__.py  templates.py
apps/template-vue/backend/src/app/tests/: conftest.py
apps/template-vue/backend/src/app/tests/contracts/api/: test_business_logic_example.py
apps/template-vue/backend/src/app/tests/contracts/bot/: test_start_command.py
apps/template-vue/backend/src/app/tests/regression/: test_is_new_admin_spam_fix.py
apps/template-vue/backend/src/app/tgbot/: bot.py
apps/template-vue/backend/src/app/tgbot/handlers/: admin.py  start.py
apps/template-vue/backend/src/app/webhook/: auth.py
apps/template-vue/backend/src/app/webhook/dependencies/: arq.py  bot.py  rabbit.py  redis.py  service.py
apps/template-vue/backend/src/app/webhook/middlewares/: __init__.py
apps/template-vue/backend/src/app/webhook/routers/: admin.py  base.py
apps/template-vue/backend/src/app/webhook/socketio/: events.py  server.py
core/backend/: README.md  pyproject.toml
core/backend/scripts/: hot_reload.py
core/backend/src/core/: __init__.py  exceptions.py
core/backend/src/core/auth/: __init__.py  rbac.py
core/backend/src/core/domain/: products.py
core/backend/src/core/infrastructure/: dependencies.py  files.py  logfire.py  logging.py  posthog.py  redis.py  request_context.py  sentry_context.py  utils.py
core/backend/src/core/infrastructure/arq/: __init__.py  factory.py
core/backend/src/core/infrastructure/arq/jobs/: __init__.py  backup.py  balance.py  notifications.py  subscriptions.py
core/backend/src/core/infrastructure/auth/: __init__.py  telegram.py
core/backend/src/core/infrastructure/config/: __init__.py  accessor.py  components.py
core/backend/src/core/infrastructure/database/: setup.py
core/backend/src/core/infrastructure/database/models/: __init__.py  base.py  enums.py  friendships.py  groups.py  invites.py  payments.py  subscriptions.py  users.py  webhooks.py
core/backend/src/core/infrastructure/database/repo/: base.py  groups.py  invites.py  payments.py  requests.py  subscriptions.py  users.py
core/backend/src/core/infrastructure/fastapi/: __init__.py  dependencies.py  factory.py  rate_limiter.py  webhooks.py
core/backend/src/core/infrastructure/fastapi/middleware/: __init__.py  request_id.py  security.py  static.py  tracker.py
core/backend/src/core/infrastructure/fastapi/routers/: __init__.py  auth_email.py  auth_telegram.py  auth_telegram_link.py  health.py  payments.py  subscriptions.py  users.py  webhooks.py
core/backend/src/core/infrastructure/i18n/: __init__.py
core/backend/src/core/infrastructure/i18n/locales/: en.json  ru.json
core/backend/src/core/infrastructure/rabbit/: consumer.py  producer.py
core/backend/src/core/infrastructure/session/: __init__.py  cookies.py
core/backend/src/core/infrastructure/socketio/: __init__.py  factory.py  types.py
core/backend/src/core/infrastructure/telegram/: __init__.py  factory.py
core/backend/src/core/infrastructure/telegram/handlers/: __init__.py  admin.py  auth.py  payments.py  start.py  telegram_link.py
core/backend/src/core/infrastructure/telegram/middlewares/: __init__.py  admin.py  auth.py  database.py  i18n.py  service.py
core/backend/src/core/infrastructure/telegram/utils/: __init__.py  formatting.py
core/backend/src/core/infrastructure/webhooks/: __init__.py  telegram_validator.py  yookassa_validator.py
core/backend/src/core/schemas/: __init__.py  auth.py  payments.py  start.py  subscriptions.py  users.py
core/backend/src/core/scripts/: __init__.py  base.py  runner.py
core/backend/src/core/scripts/common/: __init__.py  backup_database.py  restore_database.py  wipe_database.py
core/backend/src/core/services/: __init__.py  auth.py  base.py  groups.py  invites.py  messages.py  password.py  requests.py  sessions.py  start.py  subscriptions.py  telegram_link.py  users.py  worker.py
core/backend/src/core/services/notifications/: __init__.py  service.py  types.py
core/backend/src/core/services/payments/: __init__.py  service.py  types.py
core/backend/src/core/services/payments/providers/: __init__.py  telegram_stars.py  yookassa.py
core/backend/src/core/testing/: __init__.py  conftest.py
core/backend/src/core/testing/contracts/: __init__.py  auth.py  composition.py  health.py  payments.py  products.py  setup.py  users.py
core/backend/src/core/testing/fixtures/: __init__.py  api_client.py  auth.py  bot.py  database.py  mocks.py  redis.py  worker.py
core/backend/src/core/tests/: conftest.py
core/backend/src/core/tests/integration/database/: test_base_repo.py
core/backend/src/core/tests/unit/auth/: __init__.py  test_telegram_authenticator.py
core/backend/src/core/tests/unit/services/: test_password_service.py
core/backend/src/core/tests/unit/webhooks/: __init__.py  test_telegram_validator.py  test_yookassa_validator.py
docs/: dry-extraction-guide.md  (+1 more)
(+454 files in other folders)
