[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[project]
name = "template-backend"
version = "0.1.0"
description = "TMA Platform Template - Backend"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "tma-platform-core-backend",
    "g4f==0.5.6.3",
    "curl_cffi",
    "pytest",
    "aiogram",
    "sentry-sdk[arq,fastapi]>=2.42.1",
    "slowapi>=0.1.9",
    "aiogram-dialog>=2.4.0",
    "watchdog>=6.0.0",
    "resend>=2.0.0",
]

[tool.uv.sources]
tma-platform-core-backend = { workspace = true }

[project.optional-dependencies]
bot = [
    "aiogram-dialog",
    "faker",
    "watchdog",
]
worker = [
    "watchdog",
    "sentry-sdk[arq]",
]
web = [
    "uvicorn",
    "fastapi>=0.118.0",  # 0.118.0+ fixes streaming with dependencies that yield (PR #14099)
    "python-dateutil",
    "sentry-sdk[fastapi]",
    "slowapi",
    "python-socketio",  # Socket.IO server with auto-reconnect, rooms, fallback
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "greenlet>=3.2.3",
    "pytest-asyncio>=1.2.0",
    "black>=22.10.0",
    "isort>=5.13.2",
    "ruff>=0.13.2",
    "testcontainers[postgres]>=4.0.0",
    "httpx>=0.27.0",
    "asgi-lifespan>=2.1.0",
    "pytest-xdist>=3.8.0",
    "pytest-testmon>=2.1.3",
    "dirty-equals>=0.8.0",
    "inline-snapshot>=0.13.0",
    "polyfactory>=2.16.0",
    "freezegun>=1.5.0",
    "import-linter>=2.0.0",
]

[tool.black]
line-length = 120
target-version = ['py314']
include = '\.py$'
exclude = '''
/(
    src/app/migrations
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88


# ============================================================================
# PYRIGHT - Type checking (basic mode for gradual adoption)
# ============================================================================
[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"
exclude = ["src/app/migrations/"]

# Ignore missing imports from untyped libraries
reportMissingImports = false
reportMissingTypeStubs = false

# ENABLED rules (errors were fixed)
# reportGeneralTypeIssues - default enabled (use Callable not callable)
# reportInvalidTypeForm - default enabled (AsyncGenerator fixture patterns fixed)

# Permissive settings for gradual adoption
reportOptionalMemberAccess = false  # 1 error - accessing optional members
reportArgumentType = false          # 15 errors - arq/worker patterns
reportReturnType = false            # 2 errors - async generator fixtures
reportAttributeAccessIssue = false  # 5 errors - dynamic repo attributes
reportCallIssue = false             # 1 error - arq create_pool typing

# ============================================================================
# PYTEST - Testing configuration
# ============================================================================
[tool.pytest.ini_options]
# Async test support
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Test discovery - app tests first (loads conftest.py with Balance model before core)
testpaths = [
    "src/app/tests",
    "../../../core/backend/src/core/tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output and execution
addopts = [
    "-v",                                  # Verbose output
    "-n", "2",                              # Parallel execution (2 workers)
    "--dist=loadgroup",                    # Distribute tests by class (better for fixtures)
    "--strict-markers",                    # Fail on unknown markers
    "--tb=short",                          # Shorter traceback format
    "--color=yes",                         # Colored output
    "--ignore=src/app/tests/_archived",    # Exclude archived tests from collection
]

# Test markers
markers = [
    "contract: Contract tests - Test public APIs and user-facing behavior",
    "business_logic: Business logic tests - Test critical algorithms and edge cases",
    "regression: Regression tests - Prevent previously-fixed bugs from recurring",
    "issue(id): Link regression test to GitHub issue number",
    "slow: Slow tests that take more than 1 second",
]

# Filter warnings
filterwarnings = [
    # Ignore testcontainers internal deprecation warnings
    "ignore::DeprecationWarning:testcontainers.*",

    # Python 3.14: asyncio.iscoroutinefunction deprecated in favor of inspect.iscoroutinefunction
    "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning",

    # Passlib internal warning about handler naming convention (library issue)
    "ignore:handler names should be lower-case:passlib.exc.PasslibWarning",

    # Argon2 version access deprecated (passlib library issue)
    "ignore:Accessing argon2.__version__ is deprecated:DeprecationWarning",

    # Logfire API token not configured in test environment (expected)
    "ignore:Logfire API returned status code 401:UserWarning",
]

# Coverage configuration (optional, can enable later)
# addopts += ["--cov=app", "--cov-report=html", "--cov-report=term-missing"]
